# Cortex

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  TODO.md  agent.Dockerfile  bootstrap-vcpkg.bat  bootstrap.bat  build_engine.ps1  build_result.txt  cortexFinishSetup.js  dev.db  diagnostics.ps1  docker-compose.yml  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  proxy.ts  setupCortex.js  tailwind.config.js  task_schema.json  test-prisma.js  vcpkg.json
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml
ai-cto-platform/: master_prompt.txt  master_prompt_self_build.txt  prompts.md
ai-cto-platform/agent/: ai_agent.py  task_queue.py  utils.py
ai-cto-platform/logs/: changelog.md
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/ai-automation-solutions/: page.tsx
app/aiboost/: page.tsx
app/app-builder/: page.tsx
app/autoflow/: layout.tsx  page.tsx
app/automations/: page.tsx
app/bid-board/: page.tsx
app/bid-build/: page.tsx
app/bidbuilder/: page.tsx
app/blog/: page.tsx
app/builder/: page.tsx
app/builder-copilot/: page.tsx
app/chat/: page.fixed.tsx  page.tsx
app/command-center/: page.tsx
app/construction-solutions/: page.tsx
app/constructos/: layout.tsx  page.tsx
app/contact/: page.tsx
app/copilot/: page.tsx
app/cortex/: page.tsx
app/cost-calculator/: page.tsx
app/creatoros/: layout.tsx  page.tsx
app/dashboard/: page.tsx
app/data-deletion/: page.tsx
app/devboard/: page.tsx
app/engine/: page.tsx
app/estimate/: page.tsx
app/estimates/: page.tsx
app/homeowner-estimate/: page.tsx
app/internal-copilot/: page.tsx
app/json-builder/: page.tsx
app/launch/: page.tsx
app/leads/: page.tsx
app/marketplace/: page.tsx
app/onboarding/: page.tsx
app/os/: page.tsx
app/payments/: page.tsx
app/pipelines/: page.tsx
app/pricing/: page.tsx
app/privacy/: page.tsx
app/product/: page.tsx
app/projects/: page.tsx
app/resources/: page.tsx
app/reviews/: page.tsx
app/sandbox/: page.tsx
app/services/: page.tsx
app/settings/: page.tsx
app/signup/: page.tsx
app/sites-funnels/: page.tsx
app/skipped-prompts/: page.tsx
app/start/: page.tsx
app/subscription/: page.tsx
app/systems/: page.tsx
app/templates/: page.tsx
app/terms/: page.tsx
app/tradesos/: layout.tsx  page.tsx
app/website-builder/: page.tsx
app/workspace/: page.tsx
components/: HomeCopilot.tsx  HomeEstimator.tsx  HomeSandboxPreview.tsx  HomeWebsiteBuilderChat.tsx
components/ai/: AskCopilotFullWidth.tsx  BuilderStateProvider.tsx  CopilotChrome.tsx  GlobalAiAssistant.tsx
components/auth/: useAdminSession.ts
components/automations/: QuickstartTour.tsx
components/commandcenter/: CommandCenterLayout.tsx
components/construction/: CtaBand.tsx  HeroSection.tsx  (+4 more)
copilot-collab/: package-lock.json  package.json
docs/: crm_architecture.md  deployment-production.md  domain-email-google-workspace.md  estimator-v1-release-plan.md  self_improvement_loop.md
engine/: ai_agent.py  cortex_config.py  cortex_logger.py  run_agent.py  run_cto_once.py  task_queue.json  utils.py
lib/: adminAuth.ts  builder-intelligence.ts  chatBots.ts  estimator.ts  llm.ts  prisma.ts  queue.ts  sandbox.ts  subdomains.ts  subscriptionAuth.ts  workspaceStore.ts  workspaces.ts
prisma/: dev.db  prisma.config.ts  schema.prisma
scripts/: audit_platform_systems.ts  bootstrap_self_improvement.py  connect_domain_manual_dns.ts  propose_pr.py  run_builder_audit.ts  run_crm_worker.ps1  run_engine.ps1  run_estimator_backtest.ps1  run_estimator_backtest.ts  run_v1_checklist.ts  setup_dev_env.ps1  smoke_crm_api.ps1  start_crm_stack.ps1  start_production.ps1  start_production.sh
src/: CMakeLists.txt  dependency_test.cpp  main.cpp
src/ai/: CORTEXBusinessAI.cpp  Dockerfile  agent_base.py  agent_bridge.cpp  agent_bridge_bindings.cpp  agent_bridge_lib.cpp  agent_bridge_lib.h  approval_api.py  approval_api_v2.py  bridge.py  executor.py  task_queue.py  vector_store_stub.py
src/ai/agents/: __init__.py  agent_manifest.json  code_agent.py  data_agent.py  deploy_agent.py  doc_agent.py  infra_agent.py  monitor_agent.py  nlp_agent.py  ops_agent.py  planning_agent.py  repair_agent.py  rl_agent.py  test_agent.py
src/analytics/: landing-conversions.ts
src/animation/: AnimSystem.cpp
src/billing/: entitlements.ts  subscription.service.ts
src/builder/: automation-blueprints.ts  brand-dna.ts  concierge.ts  quality-gate.ts  sandbox-preview.ts
src/construction/: automation-health.service.ts  automation-templates.service.ts
src/content/: blog-engine.ts  blog-scheduler.ts
src/cortex/: spec-generator.ts
src/crm/core/: api.ts  auth.ts  crmDb.ts  env.ts  http.ts  index.ts  json.ts  openai.ts  queue.ts  realtime.ts
src/crm/modules/capture/: capture.service.ts  capture.types.ts  index.ts
src/crm/modules/close/: close.service.ts  close.types.ts  index.ts  lead-scoring.service.ts
src/crm/modules/nurture/: delivery.adapters.ts  index.ts  nurture.service.ts  nurture.types.ts  workflow.engine.ts
src/crm/modules/platform/: index.ts  system-catalog.ts  tenant-controls.ts  v1-checklist.ts
src/crm/modules/retain/: index.ts  retain.service.ts  retain.types.ts
src/cto/: taskQueue.ts
src/ecs/: ECSWorld.cpp  Registry.cpp  TransformSoA.cpp
src/estimating/: ai-takeoff.ts  market-signals.ts
src/game-builder/: v1.ts
src/hosting/: private-hosting.ts
src/marketplace/: revenue-marketplace.ts
src/networking/: NetworkSystem.cpp
src/physics/: PhysicsEngine.cpp
src/platform/: approval-lifecycle.ts  local-data-intelligence.ts  prompt-engineering.ts  tenant-enforcement.ts
src/rendering/: GLRenderer.cpp  VulkanRenderer.cpp
src/scene/: Frustum.cpp  SceneGraph.cpp  SceneNode.cpp
src/security/: autonomousGuardrails.ts  operatorAuth.ts
src/utils/: AssetStreamer.cpp  Math.cpp  PoolAllocator.cpp
tests/: platform-flows.e2e.ts  test_approval_integration.py  test_bridge.py  test_engine_checks.py  test_prompt_engineering.py  test_task_schema.py
tools/: run_debug_agent.ps1
workers/: agent.worker.ts  crm.worker.ts
(+251 files in other folders)
